EC2_Website/ec2_website.yaml
Description:  "OzNetNerd.com: Architecting on AWS - EC2 website"

Parameters:
  EnvironmentName:
    Type: String
    Default: "OzNetNerd Demo"

  AdminIp:
    Type: String
    Default: 0.0.0.0/0

  InstanceType:
    Type: String
    Default: t3a.medium

  KeyName:
    Type: String
    Description: "AWS EC2 key name"
    Default: ""

  AmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

  VpcCidr:
    Description: "IP range for the VPC"
    Type: String
    Default: 10.0.0.0/16

  PublicSubnetACidr:
    Description: "Public subnet A IP range"
    Type: String
    Default: 10.0.100.0/24

Conditions:
  HasKeyName: !Not [ !Equals [ !Ref KeyName, "" ]]

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: VPC
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: IGW
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnetACidr
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value: "Public subnet"
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
      - Key: Name
        Value: "Public route table"
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetA

  Ec2WebHost:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !If [HasKeyName, !Ref KeyName, !Ref "AWS::NoValue"]
      ImageId: !Ref AmiId
      InstanceType: !Ref InstanceType
      SubnetId: !Ref PublicSubnetA
      SecurityGroupIds:
        - !Ref Ec2WebHostSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          yum install python3 -y
          wget https://raw.githubusercontent.com/OzNetNerd/Architecting-on-AWS/main/EC2_Website/website.py
          wget https://raw.githubusercontent.com/OzNetNerd/Architecting-on-AWS/main/EC2_Website/requirements.txt
          pip3 install -r requirements.txt
          python3 website.py
      Tags:
      - Key: Name
        Value: "EC2 website"
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  Ec2WebHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "EC2 website security group"
      VpcId: !Ref Vpc
      SecurityGroupIngress:
      - Description: Allow inbound web traffic
        FromPort: 5000
        ToPort: 5000
        IpProtocol: tcp
        CidrIp: !Ref AdminIp
      - !If [HasKeyName, {
        Description: Allow SSH access,
        FromPort: 22,
        ToPort: 22,
        IpProtocol: tcp,
        CidrIp: !Ref AdminIp },
        !Ref "AWS::NoValue" ]

Outputs:
  WebAddress:
    Description: "Web address"
    Value: !Sub "http://${Ec2WebHost.PublicIp}:5000"
